--- a/HQ-Syntax/u9.md
+++ b/HQ-Syntax/u9.md
@@ -1,31 +1,30 @@
-εἰ ἀδικοίης , νικῷο ἄν .
+1a. εἰ ἀδικοίης , νικῷο ἄν .
 
-ἐὰν ταὺτα ποιῆτε , τιμᾶσθε .
+1b. ἐὰν ταὺτα ποιῆτε , τιμᾶσθε .
 
-εἰ τόδε ποιοῖμεν , νικῴμεν ἄν .
+1c. εἰ τόδε ποιοῖμεν , νικῴμεν ἄν .
 
-μὴ ἀδικοῦσα , οὐκ ἂν νικῷο .
+1d. μὴ ἀδικοῦσα , οὐκ ἂν νικῷο .
 
-μὴ ἀδικῶν , οὐκ ἂν νικῷο .
+1e. μὴ ἀδικῶν , οὐκ ἂν νικῷο .
 
-τόδε ποιοῦντες , νικῷμεν ἄν .
+1f. τόδε ποιοῦντες , νικῷμεν ἄν .
 
-εἰ τοῦτο ἐποίουν , ἐτιμώμην ἄν .
 
-εἰ τοῦτο ἐποίουν , ἐτιμώμην ἄν .
+2a. εἰ τοῦτο ἐποίουν , ἐτιμώμην ἄν .
 
-εἰ οὗτοι τούσδε ἠδίκουν , οὐκ ἂν ἐτιμῶντο . 
+2b. εἰ οὗτοι τούσδε ἠδίκουν , οὐκ ἂν ἐτιμῶντο . 
 
-εἰ μὴ θυσίαν ποιοῖτο , οὐκ ἂν νικῷ .
+2c. εἰ μὴ θυσίαν ποιοῖτο , οὐκ ἂν νικῷ .
 
-ταῦτα μὲν γέγραπται , ὦ Ἀθηναῖοι , περὶ τῶν ἀγαθοῦ ἀνθρώπου τρόπων τοῖς ποιηταῖς τοῖς εὖ τε καὶ καλῶς διδάξασι πάντας γε τοὺς πολίτας , τάδε δὲ γράφουσιν οἱ ῥήτορες οἱ νῦν πείθοντες τὸν δῆμον .
+3.  ταῦτα μὲν γέγραπται , ὦ Ἀθηναῖοι , περὶ τῶν ἀγαθοῦ ἀνθρώπου τρόπων τοῖς ποιηταῖς τοῖς εὖ τε καὶ καλῶς διδάξασι πάντας γε τοὺς πολίτας , τάδε δὲ γράφουσιν οἱ ῥήτορες οἱ νῦν πείθοντες τὸν δῆμον .
 
-καλόν τοι τὸ ταύτης τῆς γῆς ὕδωρ , κακοὶ δὲ οἱ ἄνθρωποι .
+4.  καλόν τοι τὸ ταύτης τῆς γῆς ὕδωρ , κακοὶ δὲ οἱ ἄνθρωποι .
 
-τάττοιντ' ἂν ἢ παρὰ τῇ γεφύρᾳ ἢ ὑπὲρ τὸ πεδίον οἱ ὁπλῖται οἱ ἐν τῇ νήσῳ λειφθέντες ὑπὸ τοῦ στρατηγοῦ .
+5. τάττοιντ' ἂν ἢ παρὰ τῇ γεφύρᾳ ἢ ὑπὲρ τὸ πεδίον οἱ ὁπλῖται οἱ ἐν τῇ νήσῳ λειφθέντες ὑπὸ τοῦ στρατηγοῦ .
 
-οὔτε καλὸν οὐτ' ἀγαθὸν τὰ τῶν ἄλλων κλέπτειν . ἀδικοῦντες γὰρ οὐ τιμῶνται ὑπὸ τῶν πολιτῶν οὗτοι , οἳ ἂν ὑπὸ τῶν ῥητόρων κλοπῆς γράφωνται .
+6.  οὔτε καλὸν οὐτ' ἀγαθὸν τὰ τῶν ἄλλων κλέπτειν . ἀδικοῦντες γὰρ οὐ τιμῶνται ὑπὸ τῶν πολιτῶν οὗτοι , οἳ ἂν ὑπὸ τῶν ῥητόρων κλοπῆς γράφωνται .
 
-εἰ τάδε τὰ ὅπλα εἰς ταύτην γε τὴν νῆσον μὴ ἐπέμφθη , οὔτ’ ἂν μάχῃ ἐνικήσατ’ ἐκείνους τοὺς πολεμίους τοὺς βλάπτοντας τὴν χώραν οὔτε νῦν θυσίας ἐποιεῖσθε ὡς σωθέντες . 
+7.  εἰ τάδε τὰ ὅπλα εἰς ταύτην γε τὴν νῆσον μὴ ἐπέμφθη , οὔτ’ ἂν μάχῃ ἐνικήσατ’ ἐκείνους τοὺς πολεμίους τοὺς βλάπτοντας τὴν χώραν οὔτε νῦν θυσίας ἐποιεῖσθε ὡς σωθέντες . 
 
 
