--- a/HQ-Syntax/u9.md
+++ b/HQ-Syntax/u9.md
@@ -1,21 +1,26 @@
-1a. εἰ ἀδικοίης , νικῷο ἄν .
+# Unit 9
 
-1b. ἐὰν ταὺτα ποιῆτε , τιμᾶσθε .
+1.  Sentences
 
-1c. εἰ τόδε ποιοῖμεν , νικῴμεν ἄν .
+    a. εἰ ἀδικοίης , νικῷο ἄν .
 
-1d. μὴ ἀδικοῦσα , οὐκ ἂν νικῷο .
+    b. ἐὰν ταὺτα ποιῆτε , τιμᾶσθε .
 
-1e. μὴ ἀδικῶν , οὐκ ἂν νικῷο .
+    c. εἰ τόδε ποιοῖμεν , νικῴμεν ἄν .
 
-1f. τόδε ποιοῦντες , νικῷμεν ἄν .
+    d. μὴ ἀδικοῦσα , οὐκ ἂν νικῷο .
 
+    e. μὴ ἀδικῶν , οὐκ ἂν νικῷο .
 
-2a. εἰ τοῦτο ἐποίουν , ἐτιμώμην ἄν .
+    f. τόδε ποιοῦντες , νικῷμεν ἄν .
 
-2b. εἰ οὗτοι τούσδε ἠδίκουν , οὐκ ἂν ἐτιμῶντο . 
+2. Sentences
 
-2c. εἰ μὴ θυσίαν ποιοῖτο , οὐκ ἂν νικῷ .
+    a. εἰ τοῦτο ἐποίουν , ἐτιμώμην ἄν .
+
+    b. εἰ οὗτοι τούσδε ἠδίκουν , οὐκ ἂν ἐτιμῶντο . 
+
+    c. εἰ μὴ θυσίαν ποιοῖτο , οὐκ ἂν νικῷ .
 
 3.  ταῦτα μὲν γέγραπται , ὦ Ἀθηναῖοι , περὶ τῶν ἀγαθοῦ ἀνθρώπου τρόπων τοῖς ποιηταῖς τοῖς εὖ τε καὶ καλῶς διδάξασι πάντας γε τοὺς πολίτας , τάδε δὲ γράφουσιν οἱ ῥήτορες οἱ νῦν πείθοντες τὸν δῆμον .
 
