split ἒαν into εἰ ἄν

--- a/HQ-Syntax/u9.md
+++ b/HQ-Syntax/u9.md
@@ -4,7 +4,7 @@
 
     a. εἰ ἀδικοίης , νικῷο ἄν .
 
-    b. ἐὰν ταὺτα ποιῆτε , τιμᾶσθε .
+    b. εἰ ἂν ταὺτα ποιῆτε , τιμᾶσθε .
 
     c. εἰ τόδε ποιοῖμεν , νικῴμεν ἄν .
 
