--- a/HQ-Syntax/u9.md
+++ b/HQ-Syntax/u9.md
@@ -2,34 +2,35 @@
 
 1.  Sentences
 
-    a. εἰ ἀδικοίης , νικῷο ἄν .
+    a. εἰ ἀδικοίης , νικῷο ἄν .
 
     b. εἰ ἂν ταὺτα ποιῆτε , τιμᾶσθε .
 
-    c. εἰ τόδε ποιοῖμεν , νικῴμεν ἄν .
+    c. εἰ τόδε ποιοῖμεν , νικῴμεν ἄν .
 
     d. μὴ ἀδικοῦσα , οὐκ ἂν νικῷο .
 
     e. μὴ ἀδικῶν , οὐκ ἂν νικῷο .
 
-    f. τόδε ποιοῦντες , νικῷμεν ἄν .
+    f. τόδε ποιοῦντες , νικῷμεν ἄν .
 
 2. Sentences
 
-    a. εἰ τοῦτο ἐποίουν , ἐτιμώμην ἄν .
+    a. εἰ τοῦτο ἐποίουν , ἐτιμώμην ἄν .
 
-    b. εἰ οὗτοι τούσδε ἠδίκουν , οὐκ ἂν ἐτιμῶντο . 
+    b. εἰ οὗτοι τούσδε ἠδίκουν , οὐκ ἂν ἐτιμῶντο . 
 
-    c. εἰ μὴ θυσίαν ποιοῖτο , οὐκ ἂν νικῷ .
+    c. εἰ μὴ θυσίαν ποιοῖτο , οὐκ ἂν νικῷ .
 
-3.  ταῦτα μὲν γέγραπται , ὦ Ἀθηναῖοι , περὶ τῶν ἀγαθοῦ ἀνθρώπου τρόπων τοῖς ποιηταῖς τοῖς εὖ τε καὶ καλῶς διδάξασι πάντας γε τοὺς πολίτας , τάδε δὲ γράφουσιν οἱ ῥήτορες οἱ νῦν πείθοντες τὸν δῆμον .
+3.  ταῦτα μὲν γέγραπται , ὦ Ἀθηναῖοι , περὶ τῶν ἀγαθοῦ ἀνθρώπου τρόπων τοῖς ποιηταῖς τοῖς εὖ τε καὶ καλῶς διδάξασι πάντας γε τοὺς πολίτας , τάδε δὲ γράφουσιν οἱ ῥήτορες οἱ νῦν πείθοντες τὸν δῆμον .
 
-4.  καλόν τοι τὸ ταύτης τῆς γῆς ὕδωρ , κακοὶ δὲ οἱ ἄνθρωποι .
+4.  καλόν τοι τὸ ταύτης τῆς γῆς ὕδωρ , κακοὶ δὲ οἱ ἄνθρωποι .
 
-5. τάττοιντ' ἂν ἢ παρὰ τῇ γεφύρᾳ ἢ ὑπὲρ τὸ πεδίον οἱ ὁπλῖται οἱ ἐν τῇ νήσῳ λειφθέντες ὑπὸ τοῦ στρατηγοῦ .
+5. τάττοιντ' ἂν ἢ παρὰ τῇ γεφύρᾳ ἢ ὑπὲρ τὸ πεδίον οἱ ὁπλῖται οἱ ἐν τῇ νήσῳ λειφθέντες ὑπὸ τοῦ στρατηγοῦ .
 
-6.  οὔτε καλὸν οὐτ' ἀγαθὸν τὰ τῶν ἄλλων κλέπτειν . ἀδικοῦντες γὰρ οὐ τιμῶνται ὑπὸ τῶν πολιτῶν οὗτοι , οἳ ἂν ὑπὸ τῶν ῥητόρων κλοπῆς γράφωνται .
+6.  οὔτε καλὸν οὐτ' ἀγαθὸν τὰ τῶν ἄλλων κλέπτειν . ἀδικοῦντες γὰρ οὐ τιμῶνται ὑπὸ τῶν πολιτῶν οὗτοι , οἳ ἂν ὑπὸ τῶν ῥητόρων κλοπῆς γράφωνται .
 
-7.  εἰ τάδε τὰ ὅπλα εἰς ταύτην γε τὴν νῆσον μὴ ἐπέμφθη , οὔτ’ ἂν μάχῃ ἐνικήσατ’ ἐκείνους τοὺς πολεμίους τοὺς βλάπτοντας τὴν χώραν οὔτε νῦν θυσίας ἐποιεῖσθε ὡς σωθέντες . 
+7.  εἰ τάδε τὰ ὅπλα εἰς ταύτην γε τὴν νῆσον μὴ ἐπέμφθη , οὔτ’ ἂν μάχῃ ἐνικήσατ’ ἐκείνους τοὺς πολεμίους τοὺς βλάπτοντας τὴν χώραν οὔτε νῦν θυσίας ἐποιεῖσθε ὡς σωθέντες . 
 
+15. λιπόντες τὰ ὅπλα λόγοις κακὸν ποιῶμεν τοὺς δικαίους;
 
