--- a/HQ-Syntax/u9.md
+++ b/HQ-Syntax/u9.md
@@ -31,6 +31,26 @@
 6.  οὔτε καλὸν οὐτ' ἀγαθὸν τὰ τῶν ἄλλων κλέπτειν . ἀδικοῦντες γὰρ οὐ τιμῶνται ὑπὸ τῶν πολιτῶν οὗτοι , οἳ ἂν ὑπὸ τῶν ῥητόρων κλοπῆς γράφωνται .
 
 7.  εἰ τάδε τὰ ὅπλα εἰς ταύτην γε τὴν νῆσον μὴ ἐπέμφθη , οὔτ’ ἂν μάχῃ ἐνικήσατ’ ἐκείνους τοὺς πολεμίους τοὺς βλάπτοντας τὴν χώραν οὔτε νῦν θυσίας ἐποιεῖσθε ὡς σωθέντες . 
+8.  
+9.  
+10. 
+11. 
+12. 
+13. 
+14. 
+
+
+
 
 15. λιπόντες τὰ ὅπλα λόγοις κακὸν ποιῶμεν τοὺς δικαίους;
+
+16. 
+17. 
+18. 
+19. 
+20. 
+21. 
+
+22. πέπεμψαί τοι ὑπὲρ τὸ πεδίον , ὦ νεανία , ὅπως τοὺς βαρβάρους σὺν ἀγαθῷ δαίμονι νικᾷς .
+
 
