--- a/HQ-Syntax/u9.md
+++ b/HQ-Syntax/u9.md
@@ -42,7 +42,7 @@
 
 12. ἀγαθὸν μὲν τούτοις ἡ νίκης ἐλπίς , κακὸν δὲ ὁ τῶν γε πολεμίων φόβος.
 
-13. 
+13. ἐτίμων οἱ γέροντες τοῦτον τὸν ῥήτορα , ὅς γε ἄνευ τοῦ γράμματα γράφειν τοὺς νεανίας λόγοις διδάσκοι περὶ τῶν τῆς βουλῆς καὶ τῆς ἐκκλησίας πραγμάτων . οὕτως γὰρ πεπαιδευμένοι ἦρχον ἁπασῶν τῶν νήσων . 
 
 14. 
 
