--- a/HQ-Syntax/u10.md
+++ b/HQ-Syntax/u10.md
@@ -1,7 +1,7 @@
 # Unit 10 Sentences
 
-1.  ἐν ταῖς πόλεσι ταῖς τῇ ἀληθείᾳ εὖ πολιτευομέναις οὐχ ὁ δῆμος ἀλλ’ ὁ νόμος βαδσιλεύς · πᾶς γὰρ πολίτης τοῖς νόμοις πειθόμενος δίκαια πράττει ὥστε σῴζεσθαι τήν γε πόλιν ἐκ κινδύνων τε καὶ φόβων . 	
-2.	τῇ βασιλέως θυγατρὶ ἐδήλου ὁ ποιητὴς τὰ ποιήματα τὰ περὶ τῆς φύσεως γεγραμμένα .	
-3.	
+1.  ἐν ταῖς πόλεσι ταῖς τῇ ἀληθείᾳ εὖ πολιτευομέναις οὐχ ὁ δῆμος ἀλλ’ ὁ νόμος βαδσιλεύς · πᾶς γὰρ πολίτης τοῖς νόμοις πειθόμενος δίκαια πράττει ὥστε σῴζεσθαι τήν γε πόλιν ἐκ κινδύνων τε καὶ φόβων . 	
+2.	τῇ βασιλέως θυγατρὶ ἐδήλου ὁ ποιητὴς τὰ ποιήματα τὰ περὶ τῆς φύσεως γεγραμμένα .	
+3.	ὦ πάτερ, ἐξενικήθησάν τε σύμπαντες οἱ πολέμιοι ὑπὸ τῶν στρατιωτῶν τῶν εὐγενῶν , καὶ ἡ εὐδαίμων πόλις ἐσώθη . νικήσας γὰρ ταῦτ’ ἀπήγγειλε καὶ τῇ βουλῇ καὶ τῇ ἐκκλησίᾳ ὁ στρατηγὸς ὁ μετὰ τὴν μάχην εἰς τὴν Ἀθηναίων πόλιν ἀποπεμφθείς . μενεῖ οὖν οὗτος ἐν πόλει μετά γε τῶν φίλων ὡς θυσίας τοῖς θεοῖς ἄξων . 
 4.	
-5.	ἀγαθόν τοι χρῆμα ἡ ἀηρητὴ τοῖς γ’ εὖ πεπαιδευμένοις . 
+5.	ἀγαθόν τοι χρῆμα ἡ ἀηρητὴ τοῖς γ’ εὖ πεπαιδευμένοις . 
